snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
4d032044dcd029ed575816cefcb71438e3eabc5f560d7dde7e4055fd746b95b2